# ioTools

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/: build_app.sh  build_archive.sh  build_cli.sh  create_metadata.py  create_tag.py
.github/data/: ioTools.rb
.github/workflows/: main.yml
rust-cli/: Cargo.toml  build.rs
rust-cli/src/: cli.rs
rust-core/: Cargo.toml
rust-desk/: Cargo.toml  tauri.conf.json
rust/cli/: Cargo.toml  build.rs
rust/cli/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/core/src/filesys/: mod.rs  progress.rs  state.rs  walker.rs
rust/core/src/utils/: mod.rs
rust/desk-ui/: Cargo.toml  tauri.conf.json
rust/desk-ui/src/: main.rs
rust/desk-ui/src/tools/: comm_utils.rs  mod.rs
rust/desk-ui/src/ui/: application.rs  cmd.rs  menu.rs  mod.rs
rust/ffmpeg/: Cargo.toml
rust/ffmpeg/src/: lib.rs
src/: App.vue  cli.rs  main.rs  main.ts
src/components/: HelloWorld.vue
src/components/application/: Application.vue
src/views/: Layout.vue
