[package]
name = "io_tools"
version = "0.1.0"
edition = "2021"
authors = ["wswenyue <wswenyue@gmail.com>"]
description = "The io_tools is a high-performance command line tool for processing files, text, network and other operations."
categories = ["command-line-utilities"]
homepage = "https://github.com/wswenyue/ioTools"
repository = "https://github.com/wswenyue/ioTools"
keywords = [
    "search",
    "text",
    "network",
    "filesystem",
    "tool",
]
rust-version = "1.76.0"

# 以下配置元数据可以在发布时使用
[package.metadata.info]
publish_info = """
# :sunglasses: ioTools :sunglasses:
:steam_locomotive: :steam_locomotive: :steam_locomotive: :steam_locomotive: :steam_locomotive: :steam_locomotive: :steam_locomotive:
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }

[build-dependencies]
