[package]
name = "io_tools"
categories = ["command-line-utilities"]
build = "build.rs"

rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }

[build-dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap_mangen = "0.2.20"
anyhow = "1.0.81"
serde_json = "1.0.115"
