[package]
name = "io_tools_core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
serde_json = "1.0.114"
csv = "1.3.0"
strum = "0.26.2"
strum_macros = "0.26.2"
bytesize = { version = "1.3.0", features = ["serde"] }
home = "0.5.9"

[build-dependencies]
