[package]
name = "io_tools_desk"
categories = ['gui']

rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
proc-macro2 = "1.0.79"
tauri = { version = "1.3", features = ["api-all"] }
chrono = "0.4.35"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#reqwest = { version = "0.11", features = ["json", "multipart", "socks"] }
#tokio = { version = "1", features = ["full"] }
#regex = "1.8.4"

#[dependencies.tauri-plugin-sql]
#git = "https://github.com/tauri-apps/plugins-workspace"
#branch = "v1"
#features = ["sqlite"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
