[package]
name = "io_tools_desk"
categories = ['gui']

rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
proc-macro2 = "1.0.79"

chrono = "0.4.35"
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
log = "0.4.21"

tauri = { version = "1.3", features = ["api-all", "icon-png"] }
tauri-plugin-positioner = { git = "https://github.com/lencx/tauri-plugins-workspace", features = ["system-tray"] }
tauri-plugin-log = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev", features = ["colored"] }
tauri-plugin-autostart = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev" }
window-vibrancy = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"


#[dependencies.tauri-plugin-sql]
#git = "https://github.com/tauri-apps/plugins-workspace"
#branch = "v1"
#features = ["sqlite"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
